# PocoClass

./: .dockerignore  .env.example  .gitignore  .replit  ADMIN_GUIDE.md  DOCKER_SETUP.md  FEATURES.md  GUIDE.md  INSTALLATION.md  README.md  README_CONFIGURATION.md  SETUP_GUIDE.md  TECHNICAL_MANUAL.md  VALIDATION_GUIDE.md  __init__.py  api.py  api_client.py  background_processor.py  config.py  database.py  debug_api_fields.py  debug_content.py  debug_filename_metadata.py  debug_filename_parsing.py  debug_fixed.txt  debug_full_output.py  debug_output.txt  debug_paperless_data.py  debug_pattern_matching.py  docker-compose.yml  document_dict.py  filename_decoding_demo.py  index.html  install.sh  log.txt  main.py  metadata_processor.py  output_generator.py  output_generator.py.legacy  package-lock.json  (+29 more)
.github/: FUNDING.yml
attached_assets/: Pasted--DRY-RUN-Document-1750982210598_1750982210599.txt  Post_Consumption_Script_v3.1_1750971309901.docx  dictionary_1750970803974.py  rabobank_check_account_592_1750971731177.yaml  rabobank_year_statement_1751042470300.yaml
backend/: __init__.py  api_client.py  background_processor.py  config.py  database.py  metadata_processor.py  rule_loader.py  scoring_calculator_v2.py  sync_service.py  test_engine.py  update_checker.py
distribution/: README.md  dev-build.sh  dev-rebuild.md  release.sh  releasing.md  update_available_versions.py
docker/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  SETUP_SUMMARY.md  build-image.sh  docker-compose.example.yml  docker-compose.yml  docker-compose.yml.backup  install.sh  (+4 more)
(+174 files in other folders)
